# lazy-pregen

./: Cargo.toml  DOCUMENTATION.md  LICENSE-MIT  README-SIMPLIFIED.md  README.md
src/: main.rs
